vendor/structopt-0.3.21/tests/ui/tuple_struct.stderr
error: structopt only supports non-tuple structs and enums
  --> $DIR/tuple_struct.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
